Update card grid

--- a/index.html
+++ b/index.html
@@ -15,35 +15,37 @@
             </div>
 
             <div class="user-menu">
-                <div id="home">Home</div>
-                <div id="profile">Profile</div>
-                <div id="messages">Messages</div>
-                <div id="history">History</div>
-                <div id="tasks">Tasks</div>
-                <div id="communities">Communities</div>
+                <div id="home"><img src="./icons/home-circle.png">Home</div>
+                <div id="profile"><img src="./icons/face-man-profile.png">Profile</div>
+                <div id="messages"><img src="./icons/message.png">Messages</div>
+                <div id="history"><img src="./icons/history.png">History</div>
+                <div id="tasks"><img src="./icons/calendar-check.png">Tasks</div>
+                <div id="communities"><img src="./icons/account-group.png">Communities</div>
             </div>
 
             <div class="settings-menu">
-                <div id="settings">Settings</div>
-                <div id="support">Support</div>
-                <div id="privacy">Privacy</div>
+                <div id="settings"><img src="./icons/cog.png">Settings</div>
+                <div id="support"><img src="./icons/face-agent.png">Support</div>
+                <div id="privacy"><img src="./icons/eye-off.png">Privacy</div>
             </div>
         </div>
         <div class="login-layout">
             <div class="search-bar">
-                <img src="./icons/magnify.png">
-                <input type="text">
+                <div class="search-layout">
+                    <img src="./icons/magnify.png">
+                    <input type="text">
+                </div>
             </div>
 
             <div class="user-account">
-                <img>
-                <img>
+                <img src="./icons/bell.png">
+                <img src="./icons/pfp.png">
                 <p>Angel Abarca</p>
             </div>
 
             <div class="user-greeting">
-                <img>
-                <p>Hi there, </b> Angel Abarca (@angel)</p>
+                <img class="profile-pic" src="./icons/pfp.png">
+                <p class="greeting">Hi there, <br> Angel Abarca (@angel)</p>
             </div>
 
             <div class="user-buttons">
@@ -52,7 +54,74 @@
                 <button>Share</button>
             </div>
         </div>
-        <div class="card-layout"></div>
-    </div>
+
+        <div class="card-layout">
+            <div class="card-1 card">
+                <h4>Super Cool Project</h4>
+                <p>Sed tempus ut lacus ut scelerisque. Suspendisse sollicitudin nibh erat, id facilisis felis accumsan neс</p>
+            </div>
+            <div class="card-2 card">
+                <h4>Impossible App</h4>
+                <p>In hac habitasse platea dictumst. Vivamus dictum rutrum arcu, a placerat velit sagittis id.</p>
+            </div>
+            <div class="card-3 card">
+                <h4>Ad Blocker</h4>
+                <p>Quisque eget rutrum nisl. Nam augue justo, cursus vitae metus vel, pharetra hendrerit felis. Aliquam sed malesuada. eros.</p>
+            </div>
+            <div class="card-4 card">
+                <h4>Less Cool Project</h4>
+                <p>Nullam condimentum ipsum ut lectus vehicula consectetur. Quisque sed dolor tincidunt, consectetur sapien et, facilisis dolor. Duis sem purus, dignissim ut sapien in, varius pellentesque lacus.</p>
+            </div>
+            <div class="card-5 card">
+                <h4>Easy Peasy App</h4>
+                <p>Etiam cursus eros ac efficitur fringilla. Vestibulum dignissim urna eget accumsan aliquam. Curabitur dignissim nisi in tortor commodo, ac bibendum magna tincidunt.</p>
+            </div>
+            <div class="card-6 card">
+                <h4>Money Maker</h4>
+                <p>Praesent convallis, libero quis congue elementum, nunc ante faucibus sapien, ac scelerisque tortor purus sit amet ex. Pellentesque mollis nec sem vel aliquarn.</p>
+            </div>
+            
+            <div class="sidebar">
+                <div class="announcement">
+                        <div class="ann-1">
+                            <h5>Site Maintenance</h5>
+                            <p>Vestibulum condimentum tellus lacus, in accumsan elit maximus ec. Donec hendrerit sodales congue.</p>
+                        </div>
+                        <div class="ann-2">
+                            <h5>Community Share Day</h5>
+                            <p>Nam vel lectus tincidunt, rutrum nula est, ormare libero. Aliquam dictum accumsan porttitor</p>
+                        </div>
+                        <div class="ann-3">
+                            <h5>Updated Privacy Policy</h5>
+                            <p>Phasellus efficitur nisi eget elit consectetur, eget condimentum ante auctor. Cras fringilla sagittis sem in mattin</p>
+                        </div>
+                </div>
+                <div class="trending">
+                    <div class="user-1">
+                        <img>
+                        <p class="user-account">@stinkychimp</p>
+                        <p class="user-project-name">A camera that smells</p>
+                        <img>
+                    </div>
+                    <div class="user-2">
+                        <p class="user-account">@bruhtonium</p>
+                        <p class="user-project-name">Finally... Bruhtonium</p>
+                        <img>
+                    </div>
+                    <div class="user-3">
+                        <p class="user-account">@themonkeyfromzootpia</p>
+                        <p class="user-project-name">Reproduce bananas via stem cells</p>
+                        <img>
+                    </div>
+                    <div class="user4">
+                        <img>
+                        <p class="user-account">@iamblind</p>
+                        <p class="user-project-name">adjo22biuo
+                    </div>
+                
+                    </p>
+                </div>
+            </div>
+        </div>
 </body>
 </html>
