Finishing touches to css

--- a/index.html
+++ b/index.html
@@ -45,7 +45,10 @@
 
             <div class="user-greeting">
                 <img class="profile-pic" src="./icons/pfp.png">
-                <p class="greeting">Hi there, <br> Angel Abarca (@angel)</p>
+                <div class="usergreeting">
+                    <p class="greeting">Hi there,</p>
+                    <p class="user-name">Angel Abarca (@angel)</p>
+                </div>
             </div>
 
             <div class="user-buttons">
@@ -57,32 +60,64 @@
 
         <div class="card-layout">
             <div class="card-1 card">
+                <h3>Your Projects</h3>
                 <h4>Super Cool Project</h4>
                 <p>Sed tempus ut lacus ut scelerisque. Suspendisse sollicitudin nibh erat, id facilisis felis accumsan neс</p>
+                <div class="user-interaction">
+                    <img id="favorite" src="./icons/heart.png">
+                    <img id="like" src="./icons/eye-check.png">
+                    <img id="share" src="./icons/share-variant-outline.png">
+                </div>
             </div>
             <div class="card-2 card">
                 <h4>Impossible App</h4>
                 <p>In hac habitasse platea dictumst. Vivamus dictum rutrum arcu, a placerat velit sagittis id.</p>
+                <div class="user-interaction">
+                    <img id="favorite" src="./icons/heart.png">
+                    <img id="like" src="./icons/eye-check.png">
+                    <img id="share" src="./icons/share-variant-outline.png">
+                </div>
             </div>
             <div class="card-3 card">
                 <h4>Ad Blocker</h4>
                 <p>Quisque eget rutrum nisl. Nam augue justo, cursus vitae metus vel, pharetra hendrerit felis. Aliquam sed malesuada. eros.</p>
+                <div class="user-interaction">
+                    <img id="favorite" src="./icons/heart.png">
+                    <img id="like" src="./icons/eye-check.png">
+                    <img id="share" src="./icons/share-variant-outline.png">
+                </div>
             </div>
             <div class="card-4 card">
                 <h4>Less Cool Project</h4>
                 <p>Nullam condimentum ipsum ut lectus vehicula consectetur. Quisque sed dolor tincidunt, consectetur sapien et, facilisis dolor. Duis sem purus, dignissim ut sapien in, varius pellentesque lacus.</p>
+                <div class="user-interaction">
+                    <img id="favorite" src="./icons/heart.png">
+                    <img id="like" src="./icons/eye-check.png">
+                    <img id="share" src="./icons/share-variant-outline.png">
+                </div>
             </div>
             <div class="card-5 card">
                 <h4>Easy Peasy App</h4>
                 <p>Etiam cursus eros ac efficitur fringilla. Vestibulum dignissim urna eget accumsan aliquam. Curabitur dignissim nisi in tortor commodo, ac bibendum magna tincidunt.</p>
+                <div class="user-interaction">
+                    <img id="favorite" src="./icons/heart.png">
+                    <img id="like" src="./icons/eye-check.png">
+                    <img id="share" src="./icons/share-variant-outline.png">
+                </div>
             </div>
             <div class="card-6 card">
                 <h4>Money Maker</h4>
                 <p>Praesent convallis, libero quis congue elementum, nunc ante faucibus sapien, ac scelerisque tortor purus sit amet ex. Pellentesque mollis nec sem vel aliquarn.</p>
+                <div class="user-interaction">
+                    <img id="favorite" src="./icons/heart.png">
+                    <img id="like" src="./icons/eye-check.png">
+                    <img id="share" src="./icons/share-variant-outline.png">
+                </div>
             </div>
             
             <div class="sidebar">
                 <div class="announcement">
+                        <h3 id="annoucements-header">Announcements</h3>
                         <div class="ann-1">
                             <h5>Site Maintenance</h5>
                             <p>Vestibulum condimentum tellus lacus, in accumsan elit maximus ec. Donec hendrerit sodales congue.</p>
@@ -97,25 +132,31 @@
                         </div>
                 </div>
                 <div class="trending">
+                    <h3 id="trending-header">Trending</h3>
                     <div class="user-1">
-                        <img>
-                        <p class="user-account">@stinkychimp</p>
-                        <p class="user-project-name">A camera that smells</p>
-                        <img>
+                        <img src="./icons/pepe2.png">
+                        <div class="user-project">
+                            <em class="displayed-user">@stinkychimp</em>
+                            <p class="user-project-name">A camera that smells</p>
+                        </div>
                     </div>
                     <div class="user-2">
-                        <p class="user-account">@bruhtonium</p>
-                        <p class="user-project-name">Finally... Bruhtonium</p>
-                        <img>
+                        <img src="./icons/pepe3.png">
+                        <div class="user-project">
+                            <em class="displayed-user">@bruhtonium</em>
+                            <p class="user-project-name">Finally... Bruhtonium</p>
+                        </div>
                     </div>
                     <div class="user-3">
-                        <p class="user-account">@themonkeyfromzootpia</p>
-                        <p class="user-project-name">Reproduce bananas via stem cells</p>
-                        <img>
+                        <img src="./icons/pepe4.png">
+                        <div class="user-project">
+                            <em class="displayed-user">@themonkeyfromzootpia</em>
+                            <p class="user-project-name">Reproduce bananas via stem cells</p>
+                        </div>
                     </div>
                     <div class="user4">
-                        <img>
-                        <p class="user-account">@iamblind</p>
+                        <img src="./icons/pepe5.png">
+                        <em class="displayed-user">@iamblind</em>
                         <p class="user-project-name">adjo22biuo
                     </div>
                 
